--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,13 @@
       var Alert = ReactBootstrap.Alert;
     </script>
     <!-- React Bootstrap end -->
+    <!-- start Fontawesome -->
+    <script
+      src="https://kit.fontawesome.com/18c8f8a0fe.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- end Fontawesome -->
     <!-- Fonts start -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
